src/objects/Vendor_Invoice_Payment__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>Vendor_Invoice_Line__r.Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Check_Generated__c</fullName>
        <formula>NOT(ISBLANK( Vendor_Invoice_Check__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <formula>TEXT(Vendor_Invoice_Line__r.Payment_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Invoice_Check_Number__c</fullName>
        <formula>Vendor_Invoice_Check__r.Check_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Invoice Check Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Invoice_Check__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Invoice Check</label>
        <referenceTo>Vendor_Invoice_Check__c</referenceTo>
        <relationshipLabel>Vendor Invoice Payments</relationshipLabel>
        <relationshipName>Vendor_Invoice_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Invoice_Line__c</fullName>
        <label>Vendor Invoice Line</label>
        <referenceTo>Vendor_Invoice_Line__c</referenceTo>
        <relationshipLabel>Vendor Invoice Payments</relationshipLabel>
        <relationshipName>Vendor_Invoice_Payments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Vendor_Invoice__c</fullName>
        <label>Vendor Invoice</label>
        <referenceTo>Vendor_Invoice__c</referenceTo>
        <relationshipLabel>Vendor Invoice Payments</relationshipLabel>
        <relationshipName>Vendor_Invoice_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Voided_Vendor_Invoice_Check__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Voided Vendor Invoice Check</label>
        <referenceTo>Vendor_Invoice_Check__c</referenceTo>
        <relationshipLabel>Vendor Invoice Payments (Voided Vendor Invoice Check)</relationshipLabel>
        <relationshipName>Vendor_Invoice_Payments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vendor Invoice Payment</label>
    <nameField>
        <displayFormat>VNDRSTMTPAY-{0000000}</displayFormat>
        <label>Vendor Invoice Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Invoice Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>